--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,102 @@
-body{
+body {
     margin: 0;
     text-align: center;
-    font-size:110%;
+    font-size: 110%;
 }
-.top-container{
-    background-color:darkseagreen;
+
+.top-container {
+    background-color: darkseagreen;
     position: relative;
     padding-top: 100px;
 }
-h1{
+
+h1 {
     color: #285430;
-    font-family:cursive;
-    font-size:75px;
+    font-family: cursive;
+    font-size: 75px;
 }
-h2{
-    font-weight:bolder;
+
+h2 {
+    font-weight: bolder;
     color: #285430;
     font-size: 25px;
 }
-h3{
+
+h3 {
     color: #11999E;
 }
-p{
+
+p {
     line-height: 2;
 }
-.web{
-    text-decoration: underline;
-}
 
-.top-cloud{
+.top-cloud {
     position: absolute;
     right: 300px;
     top: 50px;
 }
-.bottom-cloud{
+
+.bottom-cloud {
     position: absolute;
     left: 300px;
     bottom: 300px;
 }
-.skill-row{
+
+hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-width: 5px;
+    width: 7%;
+    border-color: darkgray;
+}
+
+.skill-row {
     text-align: left;
     margin: auto;
     width: 50%;
 }
-.profile-img{
-    width: 17%;
+
+.profile-img {
+    width: 15%;
     padding-top: 30px;
 }
-.intro{
+
+.intro {
     width: 50%;
     margin: auto;
 }
-.html-img{
-    width:15%;
-    float: right;
-    padding: 20px;
-}
-.css-img{
+
+.html-img {
     width: 15%;
-    float: left;
-     padding: 20px;
-}
-.js-img{
-    width:15%;
     float: right;
     padding: 20px;
-    
-}
-.c-img{
-    width:15%;
-    float:left;
-    padding: 20px;
-    
+
 }
 
-.contact-me{
+.css-img {
+    width: 15%;
+    float: left;
+    padding: 20px;
+}
+
+.js-img {
+    width: 15%;
+    float: right;
+    padding: 20px;
+
+}
+
+.c-img {
+    width: 15%;
+    float: left;
+    padding: 20px;
+
+}
+
+.contact-me {
     padding-bottom: 20px;
 }
+
 .btn {
   background: #8fbc8f;
   border-radius: 10px;
@@ -87,22 +107,31 @@ p{
   text-decoration: none;
   line-height: 2;
 }
-.bottom-container{
+
+.btn:hover {
+    color: #11999E;
+}
+
+.bottom-container {
     background-color: darkseagreen;
     padding-top: 30px;
     padding-bottom: 10px;
 }
-.bottom-container p{
+
+.bottom-container p {
     font-size: 90%;
     color: white;
     margin-bottom: 5px;
 }
-.bottom-container a{
+
+.bottom-container a {
     text-decoration: none;
     font-size: 25px;
     padding-left: 20px;
     color: #11999E;
 }
-.bottom-container a:hover{
-    color:aliceblue;
+
+.bottom-container a:hover {
+    color: aliceblue;
+
 }
