--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,9 @@ h3 {
 p {
     line-height: 2;
 }
-
+.web{
+    text-decoration: underline;
+}
 .top-cloud {
     position: absolute;
     right: 300px;
